--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -78,5 +78,5 @@ jobs:
     - name: Create GitHub Release
       uses: softprops/action-gh-release@e7a8f85e1c67a31e6ed99a94b41bd0b71bbee6b8 # v2.0.9
       with:
-        generate_release_notes: false
+        generate_release_notes: true
         files: dist/**
