Add checkout step

--- a/.github/workflows/pr-label-check.yml
+++ b/.github/workflows/pr-label-check.yml
@@ -10,6 +10,8 @@ jobs:
     permissions:
       pull-requests: read
     steps:
+      - name: Checkout repository 📦
+        uses: actions/checkout@v4
       - name: Check for labels 📚
         id: check-labels
         run: |
